[package]
name = "noer22"
version = "0.1.0"
edition = "2021"
description = "CLI tool to pack/unpack .noer archives with compression and authenticated encryption"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zstd = { version = "0.13", features = ["zstdmt"] }
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
postcard = { version = "1.0", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
rayon = "1.10"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "1.0"
zeroize = "1.7"
dialoguer = "0.10"
image = { version = "0.25", default-features = false, features = ["ico", "png"], optional = true }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
gui = ["eframe", "rfd", "image"]

[[bin]]
name = "noer22_gui"
path = "src/bin/noer22_gui.rs"
required-features = ["gui"]

[dependencies.eframe]
version = "0.28"
optional = true

[dependencies.rfd]
version = "0.14"
optional = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
