[package]
name = "noer22"
version = "0.3.1"
edition = "2021"
description = "CLI tool to pack/unpack .noer archives with compression and authenticated encryption"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zstd = { version = "0.13", features = ["zstdmt"] }
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.18"
rayon = "1.10"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "2.0"
zeroize = "1.7"
blake3 = "1.5"
sha2 = "0.10"
serde_json = "1.0"
zxcvbn = "3.1"
age = "0.11"
tempfile = "3.10"
ratatui = "0.30"
crossterm = "0.29"
sysinfo = "0.38"
image = { version = "0.25", default-features = false, features = ["ico", "png"], optional = true }

[dev-dependencies]

[features]
default = []
gui = ["eframe", "rfd", "image"]

[[bin]]
name = "noer22_gui"
path = "src/bin/noer22_gui.rs"
required-features = ["gui"]

[dependencies.eframe]
version = "0.33"
optional = true
default-features = false
features = ["default_fonts", "glow", "x11", "wayland"]

[dependencies.rfd]
version = "0.17"
optional = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
